# Beginner

./: .gitignore  CMakeLists.txt  Makefile  Makefile copy  build.sh  parse.sh  picture_name.txt  picture_name.xml  txt_to_xml.gawk
assets/: map.tmx  map.xml  menu.xml  state.xml
design/: 0x72_DungeonTilesetII_v1_3  0x72_DungeonTilesetII_v1_3.psd  Beginner.vsdx  game.vsdx  main.vsdx
include/: AnimatedGraphic.h  BulletHandler.h  Camera.h  Collision.h  CollisionManager.h  Enemy.h  Game.h  GameObject.h  GameOverState.h  GameState.h  GameStateMachine.h  InputHandler.h  Level.h  LoaderParams.h  MenuBotton.h  MenuState.h  PauseState.h  PlatformerObject.h  PlayState.h  Player.h  PlayerBullet.h  Resource.h  SDLGameObject.h  ShooterObject.h  SoundManager.h  TextureManager.h  Vector2D.h  tinyxml.h
include/Foundation/: BulletHandler.h  Camera.h  Collision.h  CollisionManager.h  ErrorCode.h  InputHandler.h  LoaderParams.h  Map.h  Resource.h  ScrollingBackground.h  SoundManager.h  Vector2D.h  log.h
include/Layer/: Layer.h  Level.h  LevelParser.h  ObjectLayer.h  TileLayer.h
include/NotUsed/: Enemy.h  GameObjectFactory.h  GameOverState.h  Layer.h  LevelParser.h  MainMenuState.h  MenuState.h  ObjectLayer.h  PauseState.h  Player.h  PlayerCreator.h  SDLGameObject.h  ShooterObject.h  StateParser.h  TileLayer.h
include/Object/: AnimatedGraphic.h  Bullet.h  Enemy.h  GameObject.h  GameObjectFactory.h  MenuBotton.h  MenuButton.h  Player.h  SDLGameObject.h  SpecialEffect.h  Ui.h
include/State/: BetweenLevelState.h  GameOverState.h  GameState.h  GameStateMachine.h  MainMenuState.h  MenuState.h  PauseState.h  PlayState.h  StateParser.h
src/: BulletHandler.cpp  Camera.cpp  CollisionManager.cpp  Enemy.cpp  Game.cpp  GameOverState.cpp  GameStateMachine.cpp  InputHandler.cpp  Level.cpp  LevelParser.cpp  PauseState.cpp  PlatformerObject.cpp  PlayState.cpp  Player.cpp  Resource.cpp  SDLGameObject.cpp  ScrollingBackground.cpp  TextureManager.cpp  Vector2DCamera.cpp  main.cpp
src/Foundation/: BulletHandler.cpp  Camera.cpp  CollisionManager.cpp  Resource.cpp  (+3 more)
(+50 files in other folders)
